<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:id="@+id/warnaBelakang"
    android:background="@drawable/alas_text2"
    android:layout_margin="10dp">
        <RelativeLayout
            android:id="@+id/warnaDepan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/alas_text"
            android:layout_marginStart="5dp"
            android:padding="5dp">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_item_photo"
                android:layout_width="55dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_height="55dp"
                tools:src="@android:color/darker_gray"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/img_item_photo"
                android:layout_toRightOf="@+id/img_item_photo"
                android:orientation="vertical"
                android:layout_centerVertical="true" >

                <TextView
                    android:id="@+id/tv_item_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:text="@string/nama_sekolah"
                    android:layout_marginBottom="3dp"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="5dp"
                    android:layout_marginHorizontal="10dp">
                    <TextView
                        android:id="@+id/tv_akreditasi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="@string/akreditasi"
                        android:textSize="10sp"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/tv_jurusan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="@string/jurusan"
                        android:textSize="10sp"
                        android:textStyle="bold"
                        android:layout_marginLeft="25dp"/>
                </LinearLayout>
                <TextView
                    android:id="@+id/tv_item_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:maxLines="1"
                    tools:text="@string/keterangan"/>
            </LinearLayout>
        </RelativeLayout>
</RelativeLayout>