<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/hp_coverSekolah"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/smk_pr2_1"
            android:layout_marginBottom="16dp"
            android:adjustViewBounds="true"/>
        <TextView
            android:id="@+id/hp_namaSekolah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="nama"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginBottom="15dp"
            android:layout_gravity="center"/>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/border_bottom"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp">
            <TableRow
                android:layout_width="wrap_content"
                android:orientation="horizontal"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:background="#fff"
                android:layout_gravity="center"
                android:layout_marginBottom="2dp" >
                <ImageView
                    android:id="@+id/hp_iconAkreditasi"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/appreciation"/>
                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="10dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Akreditasi"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/hp_akreditasi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Activity2_Akreditasi"/>
                </LinearLayout>

                <ImageView
                    android:id="@+id/hp_iconJurusan"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="40dp"
                    android:src="@drawable/jurusan"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Jurusan"
                        android:layout_marginStart="10dp"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/hp_jurusan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:text="@string/Activity2_Jurusan"
                        android:layout_marginStart="10dp"/>
                </LinearLayout>
            </TableRow>
        </TableRow>
        <TextView
            android:id="@+id/hp_deskripsiSekolah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deskripsi_Sekolah"
            android:layout_gravity="center"
            android:textSize="12sp"
            android:lineSpacingMultiplier="1.1"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            />

        <TableRow
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="5dp">
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/contact"/>

                <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="Contact" />
                    <TextView
                        android:id="@+id/hp_contact"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/contact_sekolah"
                        android:textSize="12sp"/>
                </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_marginBottom="25dp"
            android:layout_marginStart="5dp">
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/gmaps"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="Alamat" />
                <TextView
                    android:id="@+id/hp_alamat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alamat_Sekolah"
                    android:textSize="12sp"/>
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp">
            <ImageView
                android:id="@+id/hp_img_view_1"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:adjustViewBounds="true"
                android:layout_marginStart="15dp"
                tools:src="@android:color/darker_gray"/>
            <ImageView
                android:id="@+id/hp_img_view_2"
                android:layout_width="160dp"
                android:layout_height="150dp"
                android:adjustViewBounds="true"
                android:layout_marginStart="10dp"
                tools:src="@android:color/darker_gray"/>
        </TableRow>
    </LinearLayout>
</ScrollView>
